verif/test/deca/context/invalid/initialization/assiging-string-to-int-verif.res
src/test/deca/context/invalid/initialization/assiging-string-to-int.deca:11:12: Expression of type 'string' cannot be assigned to an 'int'
